# slot-machine

./: .gitignore  CMakeLists.txt  README.md  flake.nix
resources/shaders/: base_fs.glsl  base_vs.glsl
src/: app.cpp  app.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  gfx.cpp  gfx.hpp  main.cpp  math.hpp  mesh.cpp  mesh.hpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
